--- a/src/css/slick-theme.css
+++ b/src/css/slick-theme.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* Slider */
 .slick-loading .slick-list {
-  background: #ffffff url('ajax-loader.gif') center center no-repeat;
+  background: #ffffff center center no-repeat;
 }
 /* Arrows */
 .slick-prev,
@@ -42,7 +42,7 @@
 }
 .slick-prev:before,
 .slick-next:before {
-  font-family: "slick";
+  font-family: 'slick';
   font-size: 20px;
   line-height: 1;
   color: #ffffff;
@@ -51,38 +51,38 @@
   -moz-osx-font-smoothing: grayscale;
   /* Icons */
 }
-@font-face {
+/* @font-face {
   font-family: 'slick';
   font-weight: normal;
   font-style: normal;
   src: url('fonts/slick.eot');
   src: url('fonts/slick.eot?#iefix') format('embedded-opentype'), url('fonts/slick.woff') format('woff'), url('fonts/slick.ttf') format('truetype'), url('fonts/slick.svg#slick') format('svg');
-}
+} */
 .slick-prev {
   left: -25px;
 }
-[dir="rtl"] .slick-prev {
+[dir='rtl'] .slick-prev {
   left: auto;
   right: -25px;
 }
 .slick-prev:before {
-  content: "←";
+  content: '←';
 }
-[dir="rtl"] .slick-prev:before {
-  content: "→";
+[dir='rtl'] .slick-prev:before {
+  content: '→';
 }
 .slick-next {
   right: -25px;
 }
-[dir="rtl"] .slick-next {
+[dir='rtl'] .slick-next {
   left: -25px;
   right: auto;
 }
 .slick-next:before {
-  content: "→";
+  content: '→';
 }
-[dir="rtl"] .slick-next:before {
-  content: "←";
+[dir='rtl'] .slick-next:before {
+  content: '←';
 }
 /* Dots */
 .slick-dotted .slick-slider {
@@ -132,10 +132,10 @@
   position: absolute;
   top: 0;
   left: 0;
-  content: "•";
+  content: '•';
   width: 20px;
   height: 20px;
-  font-family: "slick";
+  font-family: 'slick';
   font-size: 6px;
   line-height: 20px;
   text-align: center;
